# splendid-tour

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  fetch.py  main.py  parse.py  pyproject.toml  storage.py
sample_html/: national_lottery_games.html
tests/: test_fetch.py  test_parse.py  test_storage.py
